fixed the uneven gaps

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -64,7 +64,7 @@
   /* background-color: rgb(255, 166, 0); */
   scroll-snap-align: center;
   /* padding: 2em; */
-  margin-left: 1em;
+  margin-left: .5em;
 
   /* Grid property */
   grid-template-columns: repeat(3,auto);
